added main routes, need to later update how I'm storing and passing token

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SPOTIFY_CLIENT_ID='14ed7f67febf47e4856c23b51b17b4e2'
 SPOTIFY_CLIENT_SECRET='441058c539984215b95ed7b5a358725c'
+HOSTING_URL='http://localhost:5173'
