updating server to store access tokens securely

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 SPOTIFY_CLIENT_ID='14ed7f67febf47e4856c23b51b17b4e2'
 SPOTIFY_CLIENT_SECRET='441058c539984215b95ed7b5a358725c'
 HOSTING_URL='http://localhost:5173'
+SESSION_SECRET="my secret session!"
+NODE_SERVER_DOMAIN="http://localhost:5000"
+NODE_ENV="development"
