--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ SPOTIFY_CLIENT_SECRET='441058c539984215b95ed7b5a358725c'
 HOSTING_URL='http://localhost:5173'
 SESSION_SECRET="my secret session!"
 NODE_SERVER_DOMAIN="http://localhost:5000"
+NODE_SERVE_URL="http://localhost:5000"
 NODE_ENV="development"
